--- a/novnc/app/locale/fr.json
+++ b/novnc/app/locale/fr.json
@@ -40,7 +40,7 @@
     "Reboot": "Redémarrer",
     "Reset": "Réinitialiser",
     "Clipboard": "Presse-papiers",
-    "Edit clipboard content in the textarea below.": "Editer le contenu du presse-papier dans la zone ci-dessous.",
+    "Clear": "Effacer",
     "Full screen": "Plein écran",
     "Settings": "Paramètres",
     "Shared mode": "Mode partagé",
