--- a/novnc/app/locale/nl.json
+++ b/novnc/app/locale/nl.json
@@ -40,7 +40,7 @@
     "Reboot": "Herstarten",
     "Reset": "Resetten",
     "Clipboard": "Klembord",
-    "Edit clipboard content in the textarea below.": "Edit de inhoud van het klembord in het tekstveld hieronder",
+    "Clear": "Wissen",
     "Full screen": "Volledig Scherm",
     "Settings": "Instellingen",
     "Shared mode": "Gedeelde Modus",
