--- a/novnc/app/locale/cs.json
+++ b/novnc/app/locale/cs.json
@@ -11,9 +11,11 @@
     "Disconnected": "Odpojeno",
     "New connection has been rejected with reason: ": "Nové připojení bylo odmítnuto s odůvodněním: ",
     "New connection has been rejected": "Nové připojení bylo odmítnuto",
+    "Credentials are required": "Jsou vyžadovány přihlašovací údaje",
     "Password is required": "Je vyžadováno heslo",
     "noVNC encountered an error:": "noVNC narazilo na chybu:",
     "Hide/Show the control bar": "Skrýt/zobrazit ovládací panel",
+    "Drag": "Přetáhnout",
     "Move/Drag viewport": "Přesunout/přetáhnout výřez",
     "viewport drag": "přesun výřezu",
     "Active Mouse Button": "Aktivní tlačítka myši",
@@ -29,6 +31,8 @@
     "Toggle Ctrl": "Přepnout Ctrl",
     "Alt": "Alt",
     "Toggle Alt": "Přepnout Alt",
+    "Toggle Windows": "Přepnout Windows",
+    "Windows": "Windows",
     "Send Tab": "Odeslat tabulátor",
     "Tab": "Tab",
     "Esc": "Esc",
@@ -43,6 +47,7 @@
     "Reset": "Reset",
     "Clipboard": "Schránka",
     "Clear": "Vymazat",
+    "Full screen": "Celá obrazovka",
     "Fullscreen": "Celá obrazovka",
     "Settings": "Nastavení",
     "Shared mode": "Sdílený režim",
@@ -50,22 +55,37 @@
     "Clip to window": "Přizpůsobit oknu",
     "Scaling mode:": "Přizpůsobení velikosti",
     "None": "Žádné",
+    "Local Downscaling": "Místní zmenšení",
     "Local scaling": "Místní",
     "Remote resizing": "Vzdálené",
     "Advanced": "Pokročilé",
+    "Quality:": "Kvalita:",
+    "Compression level:": "Úroveň komprese:",
     "Repeater ID:": "ID opakovače",
     "WebSocket": "WebSocket",
     "Encrypt": "Šifrování:",
     "Host:": "Hostitel:",
     "Port:": "Port:",
     "Path:": "Cesta",
+    "Local Cursor": "Místní kurzor",
     "Automatic reconnect": "Automatická obnova připojení",
     "Reconnect delay (ms):": "Zpoždění připojení (ms)",
     "Show dot when no cursor": "Tečka místo chybějícího kurzoru myši",
     "Logging:": "Logování:",
+    "Version:": "Verze:",
     "Disconnect": "Odpojit",
     "Connect": "Připojit",
+    "Server identity": "Identita serveru",
+    "The server has provided the following identifying information:": "Server poskytl následující identifikační údaje:",
+    "Fingerprint:": "Otisk:",
+    "Please verify that the information is correct and press \"Approve\". Otherwise press \"Reject\".": "Ověřte prosím, zda jsou informace správné a stiskněte \"Schválit\". V opačném případě stiskněte \"Odmítnout\".",
+    "Approve": "Schválit",
+    "Reject": "Odmítnout",
+    "Credentials": "Přihlašovací údaje",
+    "Username:": "Uživatelské jméno:",
     "Password:": "Heslo",
-    "Send Password": "Odeslat heslo",
-    "Cancel": "Zrušit"
+    "Send credentials": "Odeslat přihlašovací údaje",
+    "Cancel": "Zrušit",
+    "Canvas not supported.": "Canvas není podporován.",
+    "Disconnect timeout": "Časový limit pro odpojení vypršel"
 }
