--- a/novnc/app/locale/pt_BR.json
+++ b/novnc/app/locale/pt_BR.json
@@ -1,4 +1,5 @@
 {
+    "Running without HTTPS is not recommended, crashes or other issues are likely.": "Executar sem HTTPS não é recomendado, travamentos ou outros problemas são prováveis.",
     "Connecting...": "Conectando...",
     "Disconnecting...": "Desconectando...",
     "Reconnecting...": "Reconectando...",
@@ -7,6 +8,7 @@
     "Connected (encrypted) to ": "Conectado (com criptografia) a ",
     "Connected (unencrypted) to ": "Conectado (sem criptografia) a ",
     "Something went wrong, connection is closed": "Algo deu errado. A conexão foi encerrada.",
+    "Failed to connect to server: ": "Falha ao conectar-se ao servidor: ",
     "Failed to connect to server": "Falha ao conectar-se ao servidor",
     "Disconnected": "Desconectado",
     "New connection has been rejected with reason: ": "A nova conexão foi rejeitada pelo motivo: ",
@@ -34,12 +36,13 @@
     "Send Ctrl-Alt-Del": "Enviar Ctrl-Alt-Del",
     "Shutdown/Reboot": "Desligar/reiniciar",
     "Shutdown/Reboot...": "Desligar/reiniciar...",
-    "Power": "Ligar",
+    "Power": "Energia",
     "Shutdown": "Desligar",
     "Reboot": "Reiniciar",
     "Reset": "Reiniciar (forçado)",
     "Clipboard": "Área de transferência",
     "Clear": "Limpar",
+    "Full screen": "Tela cheia",
     "Fullscreen": "Tela cheia",
     "Settings": "Configurações",
     "Shared mode": "Modo compartilhado",
@@ -47,6 +50,7 @@
     "Clip to window": "Recortar à janela",
     "Scaling mode:": "Modo de dimensionamento:",
     "None": "Nenhum",
+    "Local Downscaling": "Redução de escala local",
     "Local scaling": "Local",
     "Remote resizing": "Remoto",
     "Advanced": "Avançado",
@@ -65,7 +69,24 @@
     "Version:": "Versão:",
     "Disconnect": "Desconectar",
     "Connect": "Conectar",
+    "Server identity": "Identidade do servidor",
+    "The server has provided the following identifying information:": "O servidor forneceu as seguintes informações de identificação:",
+    "Fingerprint:": "Impressão digital:",
+    "Please verify that the information is correct and press \"Approve\". Otherwise press \"Reject\".": "Por favor, verifique se a informação está correta e pressione \"Aprovar\". Caso contrário, pressione \"Rejeitar\".",
+    "Approve": "Aprovar",
+    "Reject": "Rejeitar",
+    "Credentials": "Credenciais",
+    "Send credentials": "Enviar credenciais",
     "Username:": "Nome de usuário:",
     "Password:": "Senha:",
-    "Cancel": "Cancelar"
+    "Cancel": "Cancelar",
+    "Canvas not supported.": "Canvas não suportado.",
+    "Password is required": "A senha é obrigatória",
+    "Disconnect timeout": "Tempo de desconexão esgotado",
+    "No mousebutton": "Nenhum botão do mouse",
+    "Left mousebutton": "Botão esquerdo do mouse",
+    "Middle mousebutton": "Botão do meio do mouse",
+    "Right mousebutton": "Botão direito do mouse",
+    "Local Cursor": "Cursor Local",
+    "Must set host": "É necessário definir o host"
 }
