--- a/novnc/app/locale/pt_BR.json
+++ b/novnc/app/locale/pt_BR.json
@@ -17,6 +17,7 @@
     "noVNC encountered an error:": "O noVNC encontrou um erro:",
     "Hide/Show the control bar": "Esconder/mostrar a barra de controles",
     "Drag": "Arrastar",
+    "viewport drag": "arrastar a janela",
     "Move/Drag viewport": "Mover/arrastar a janela",
     "Keyboard": "Teclado",
     "Show keyboard": "Mostrar teclado",
@@ -41,18 +42,18 @@
     "Reboot": "Reiniciar",
     "Reset": "Reiniciar (forçado)",
     "Clipboard": "Área de transferência",
-    "Clear": "Limpar",
+    "Clear": "Limpar área de transferência",
     "Full screen": "Tela cheia",
     "Fullscreen": "Tela cheia",
     "Settings": "Configurações",
     "Shared mode": "Modo compartilhado",
-    "View only": "Apenas visualizar",
+    "View only": "Apenas visualização",
     "Clip to window": "Recortar à janela",
     "Scaling mode:": "Modo de dimensionamento:",
     "None": "Nenhum",
     "Local Downscaling": "Redução de escala local",
-    "Local scaling": "Local",
-    "Remote resizing": "Remoto",
+    "Local scaling": "Escala local",
+    "Remote resizing": "Redimensionamento remoto",
     "Advanced": "Avançado",
     "Quality:": "Qualidade:",
     "Compression level:": "Nível de compressão:",
@@ -63,7 +64,7 @@
     "Port:": "Porta:",
     "Path:": "Caminho:",
     "Automatic reconnect": "Reconexão automática",
-    "Reconnect delay (ms):": "Atraso da reconexão (ms)",
+    "Reconnect delay (ms):": "Atraso para reconectar (ms):",
     "Show dot when no cursor": "Mostrar ponto quando não há cursor",
     "Logging:": "Registros:",
     "Version:": "Versão:",
@@ -88,5 +89,8 @@
     "Middle mousebutton": "Botão do meio do mouse",
     "Right mousebutton": "Botão direito do mouse",
     "Local Cursor": "Cursor Local",
-    "Must set host": "É necessário definir o host"
+    "Must set host": "É necessário definir o host",
+    "Forcing clipping mode since scrollbars aren't supported by IE in fullscreen": "Forçando o modo de recorte, pois as barras de rolagem não são suportadas pelo IE em tela cheia",
+    "Active Mouse Button": "Botão do mouse ativo",
+    "Edit clipboard content in the textarea below.": "Edite o conteúdo da área de transferência na área de texto abaixo."
 }
